--- a/index.html
+++ b/index.html
@@ -42,17 +42,10 @@ layout: default
 		My overall GPA is 3.96 out of 4.00, highest within 5 years. I am the top student among 183 classmates in my school. 
 			
 			
-		<p>I finished my major curricula in 2 years and I learned a lot from online courses. 
-			<a href="http://anyirao.com/more"> [Whole]</a><br>
-			
-			<li>Hsuan-Tien Lin.  Machine Learning Foundations. National Taiwan University. <br>
-			<li>Andrew Ng. CS229: Machine Learning. Stanford.
-				<span class="tag"><a href="papers/ML_Proposal.pdf"> [Proposal]</a></span>  <br>
-			<li>Silvio Savarese. CS231A: Computer Vision: from 3D reconstruction to recognition. Stanford.<br>
-			<li>Fei-Fei Li &amp Andrej Karpathy. CS231N: Convolutional Neural Networks for Visual Recognition. Stanford.<br>
-			<li>Daphne Koller. CS228: Probabilistic Graphical Models. Stanford.<br>
-			<li>Chris Manning &amp Richard Socher. CS224N: Natural Language Processing with Deep Learning. Stanford.<br>	
+		<p>I finished my major curricula in 2 years and I learned a bunch of online courses. 
+			<a href="http://anyirao.com/more"> [Whole]</a><br>	
 		</p>
+		
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
 	<p><span style="font-weight: bold;">Real-time Large-scale Surface Reconstruction of Lidar Point Cloud</span> <br>
