--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 	<h3>Short Bio</h3>
 		<p> I am a final-year undergrad student from School of Electronic Science and Engineering 
 			<a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
-			Excellent Engineer Honor Class</a>, Nanjing University. I am a reserach assistant of The University of Oregon, 
+			Excellent Engineer Honor Class</a>, Nanjing University. I am a research assistant of The University of Oregon, 
 			supervised by Prof. <a href="http://ix.cs.uoregon.edu/~dou/">Dejing Dou</a>.
 			I was a research summer intern of The University of Hong Kong, worked with Prof.
 			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> and
