--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
 		Proposed a novel line of sight algorithm to real-time reconstruct surface and achieved state-of-the-art results.<br>
 		Employed a new surface lattice data structure in implicit surface update for memory efficiency.<br>
 		Presented a real-time 3D reconstruction pipeline for large-scale Lidar point cloud.<br>		
-		Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloudd.
+		Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloud.
 			
 	
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
