--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ layout: default
 		Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
 		and the method achieved excellent performances on benchmarks.
 		
-	<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Porbabilistic Machine Learning</span> <br>
+	<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
 	<span style="font-style: italic;"> Jul.2017-Aug.2017 </span> &nbsp  The University of Hong Kong, Hong Kong S.A.R.<br>
 		Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
 		to O(n). It is able to work in real time with practical length scores.<br>
