--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@ layout: default
 	
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  Advanced Integration and Mining Lab, Eugene, OR, United States of America<br>
-		Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models 
-			with the help of WordNet constraints.<br>
+		Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
 		Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
 		and the method achieved excellent performances on benchmarks.
 		
