--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ layout: default
 			Excellent Engineer Honor Class</a>, Nanjing University. I am a research assistant of The University of Oregon, 
 			supervised by Prof. <a href="http://ix.cs.uoregon.edu/~dou/">Dejing Dou</a>.
 			I was a research summer intern of The University of Hong Kong, worked with Prof.
-			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> and
+			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> (Associate Dean) and
 			a member of Learning And Mining from DatA group led by Prof. 
-			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a>. 
+			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> (Fellow of the ACM, AAAI, AAAS, IEEE). 
 		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
