--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ layout: default
 	<p><span style="font-weight: bold;">Single Photon Detector, main contributor</span> <br>
 	<span style="font-style: italic;">  Oct.2014-Dec.2015</span>
 		     &nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
-		     Designed a 64-channels low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times, drew an 8-layers circuit board. 
+		     Designed a 64-channel low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times, drew an 8-layers circuit board. 
 		     <span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span>
 		     <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Oral]</a></span><br>
 	</div>        
