--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ layout: default
         <h3>Skills</h3> 
 		<p>
 		Programming: Advanced Python, C/C++, MATLAB   &nbsp Intermediate HTML, CSS, Assembly, Altium <br>
-		Research Platforms and Libraries: TensorFlow, Theano, MatConvNet, Caffe, Weka, liblinear, libSVM, Word2Vec, VLFeat, CVX,
-			SPArse Modeling Software, OpenCV, OpenGL, WebGL, Git<br>
+		Research Platforms and Libraries: TensorFlow, Theano, ROS, OpenCV, Caffe, Weka, liblinear, libSVM, Word2Vec, VLFeat, CVX,
+			SPAMS, OpenGL, WebGL, Git<br>
 		Operating Systems: Linux, Windows, macOS<br>
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
 		</p>
