--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ layout: default
 		Preprocessed data sets with the html2text;
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
-		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span> 
+		<p><span style="font-weight: bold;">3D Human Poses Estimation from a Single Image; Computer Vision </span> 
 				<span class="tag"><a href="papers/CV_Report.pdf"> [Presentation]</a></span><br>
 			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
 			Enforced human-portion constraints to get a minimization problem
