--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ layout: default
 		Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
 	
 		
-	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
+	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
 		Learned K-armed bandit, Monte Carlo RL, imitation learning. <br>
 		Constructed three models to depict road circumstances and two models to predict car motion using 
@@ -106,7 +106,7 @@ layout: default
 		 
 		   
             		    
-	<p><span style="font-weight: bold;">Single Photon Detector, main contributor</span> <br>
+	<p><span style="font-weight: bold;">Single Photon Detector</span> <br>
 	<span style="font-style: italic;">  Oct.2014-Dec.2015</span>
 		     &nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
 		     Designed a 64-channel low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times, drew an 8-layers circuit board. 
