--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ layout: default
 			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
 			Enforced human-portion constraints to get a minimization problem
 		
-		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Multidimensional Deﬁnite Integrals; 
+		<p><span style="font-weight: bold;">Monte Carlo Method for Multidimensional Deﬁnite Integrals; 
 			Probability and Stochastic Process </span>
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Report]</a></span>	
 		
