--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@ layout: default
             <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China<br>
             Email: anyirao [at] outlook (dot) com<br>
             </p>
+		  <div id="contact">
+        			<a href="www.linkedin.com/in/anyirao" class="icon">
+                  <img src="images/linkedin_32.png" alt="View Anyi Rao's profile on LinkedIn">
+            	</a>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          		<a href="https://github.com/AnyiRao" class="icon">
+          			<img src="images/git_32.png"/>
+          		</a>
+        		</div>
 	  </div>
 </div>	   
 
