--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ layout: default
             </p>
 		<div id="contact">
         		<a href="https://www.linkedin.com/in/anyirao/" class="icon">
-                		<img src="images/linkedin_30.png" alt="View Anyi Rao's profile on LinkedIn">
+                		<img src="images/linkedin_30.jpg" alt="View Anyi Rao's profile on LinkedIn">
             		</a>
               		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           		<a href="https://github.com/AnyiRao" class="icon">
-          			<img src="images/git_30.png"/>
+          			<img src="images/git_30.jpg"/>
           		</a>
         	</div>
 	  </div>
