--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div class="content heading anchor" id="home">
           <div class="img"><img class="header-img" src="img/Anyi.jpg" alt="Photo" align="left" height="250" ></div>
           <div class="header-text">
-            <h2>Anyi Rao</h2>
+            <h2>Anyi (Ray) Rao</h2>
             <p>Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
             <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China<br>
@@ -15,11 +15,11 @@ layout: default
             </p>
 		<div id="contact">
         		<a href="https://www.linkedin.com/in/anyirao/" class="icon">
-                		<img src="images/linkedin_30.jpg" alt="View Anyi Rao's profile on LinkedIn">
+                		<img src="images/linkedin_30.jpg" alt="View Anyi (Ray) Rao's profile on LinkedIn">
             		</a>
-              		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           		<a href="https://github.com/AnyiRao" class="icon">
-          			<img src="images/git_30.jpg"/>
+          			<img src="images/git_30.jpg"  alt="View Anyi (Ray) Rao's codes on Github">
           		</a>
         	</div>
 	  </div>
