--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div class="content heading anchor" id="home">
           <div class="img"><img class="header-img" src="img/Anyi.jpg" alt="Photo" align="left" height="250" ></div>
           <div class="header-text">
-            <h2>Anyi (Ray) Rao</h2>
+            <h2>Ray Anyi Rao</h2>
             <p>Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
             <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China<br>
