--- a/index.html
+++ b/index.html
@@ -174,14 +174,15 @@ layout: default
 		<p>National Scholarship awarded by the China Ministry of Education, the highest honor in China<br>
 		Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
 		Zhenggang Scholarship, top 40 students in Nanjing University<br>
-		Nanjing University People Scholarship<br>	
+		Zhenggang Jingying Scholarship<br>
+		Nanjing University People Scholarship, 2016, 2017<br>	
                 Nanjing University Outstanding Student Leader Award<br>
                 Nanjing University Outstanding Student Award<br>
 	        Nanjing University Top Volunteer Excellence Award<br>
-		Calculus World Cup world ranking 32th, <a herf="www.ntu.edu.tw/english/"> National Taiwan University </a><br>
-		Meritorious winner prize in the 2016 National Mathematical Modeling Contest<br>
-		First prize in the 2014 University Electronics Design Contest and the paper about it was published in Nanjing University 
-		19th Art and Science Forum
+		World ranking 32th in 2016 <a herf="https://www.youtube.com/watch?v=iO5runHvnoM"> Calculus World Cup</a><br>
+		Meritorious winner prize in the 2016 National Mathematical Contest in Modeling<br>
+		First prize in the 2014 University Electronics Design Contest<br>
+		First prize in Invitational Natioanl Mathematical Olympid <a herf="img/MathSeniorHigh.png">[Gold Medal]</a>, 2013  
 		</p>	
 	</div>    
 		
