--- a/index.html
+++ b/index.html
@@ -125,27 +125,27 @@ layout: default
 	
 	<div class="content anchor" id="project">  
 	   <h3>Course Projects</h3>
-		<p><span style="font-weight: bold;">Construction of a Spam Filtering System; Machine Learning</span> <br>
+		<p><span style="font-weight: bold;">Machine Learning</span> <br> Construction of a Spam Filtering System
 		Preprocessed data sets with the html2text;
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
-		<p><span style="font-weight: bold;">3D Human Poses Estimation from a Single Image; Computer Vision </span> 
+		<p><span style="font-weight: bold;">Computer Vision </span> 3D Human Poses Estimation from a Single Image
 				<span class="tag"><a href="papers/CV_Report.pdf"> [Presentation]</a></span><br>
 			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
 			Enforced human-portion constraints to get a minimization problem
 		
-		<p><span style="font-weight: bold;">Monte Carlo Method for Multidimensional Deﬁnite Integrals; 
-			Probability and Stochastic Process </span>
+		<p><span style="font-weight: bold;"> Probability and Stochastic Process </span> 
+			Monte Carlo Method for Multidimensional Integrals
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Report]</a></span>	
 		
-		<p><span style="font-weight: bold;">Cluster sky objects; Python</span>
+		<p><span style="font-weight: bold;">Python </span> Cluster sky objects
 			<span class="tag"><a href="papers/Cluster.txt"> [Details]</a></span>
 		
-		<p><span style="font-weight: bold;">Tetris Game; C++ </span>
+		<p><span style="font-weight: bold;">C++ </span> Tetris Game
 			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
 			 
-		<p><span style="font-weight: bold;">Assembly Language Practice;
-			The Principle of Microcomputers and Interface Techniques </span>
+		<p><span style="font-weight: bold;"> Microcomputers and Interface Techniques </span>
+			Assembly Language Practice
 		<span class="tag"><a href="papers/masm.pdf"> [Report]</a></span>
 			
 	</div>
