--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ layout: default
 	
 	<div class="content anchor" id="project">  
 	   <h3>Course Projects</h3>
-		<p><span style="font-weight: bold;">Machine Learning</span> <br> Construction of a Spam Filtering System
+		<p><span style="font-weight: bold;">Machine Learning</span> Construction of a Spam Filtering System <br> 
 		Preprocessed data sets with the html2text;
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
@@ -145,19 +145,13 @@ layout: default
 			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
 			 
 		<p><span style="font-weight: bold;"> Microcomputers and Interface Techniques </span>
-			Assembly Language Practice
+			x86 Assembly Language Programming
 		<span class="tag"><a href="papers/masm.pdf"> [Report]</a></span>
 			
 	</div>
 
 	<div class="content" >      
 		<h3>Leadership Experience</h3>
-		<p>  Vice President of a Young Volunteers Association at Nanjing University &nbsp &nbsp 
-			<span style="font-style: italic;"> Jun.2015-Jun.2016</span> <br>
-		Organized and participated in over 100 out-of-school and 20 in-school activities covering over 1000 volunteers.
-		Our assocation received a volunteers association excellence award.
-                </p>
-
 		<p>  Co-Founder of a Children Care Volunteer Program  &nbsp &nbsp 
 			<span style="font-style: italic;"> Sep.2015-Dec.2015</span> <br>		
 		Co-founded a psychological consulting program to promote left-behind children, 
@@ -165,8 +159,14 @@ layout: default
 		Volunteered to teach left-behind children Math and English in 
 			a junior high school located in the remote, underdeveloped Xiushui county.
 		Recognized as a key team leader in the successful Warm One Hundred Campaign, which raised money for
-			left-behind children. Our group received excellence award.
+			left-behind children. Our group received excellence award from China Foundation for Poverty Alleviation.
                 </p>
+		
+		<p>  Vice President of a Young Volunteers Association at Nanjing University &nbsp &nbsp 
+			<span style="font-style: italic;"> Jun.2015-Jun.2016</span> <br>
+		Organized and participated in over 100 out-of-school and 20 in-school activities covering over 1000 volunteers.
+		Our assocation received a volunteers association excellence award.
+                </p>		
 	</div> 
 		
 	<div class="content" >      
