--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ layout: default
 
 	<div class="content" >      
 		<h3>Leadership Experience</h3>
-		<p>  Co-Founder of a Children Care Volunteer Program  &nbsp &nbsp 
+		<p> <span style="font-weight: bold;"> Co-Founder </span> of a Children Care Volunteer Program  &nbsp &nbsp 
 			<span style="font-style: italic;"> Sep.2015-Dec.2015</span> <br>		
 		Co-founded a psychological consulting program to promote left-behind children, 
 			whose parents left them to seek work in big cities, growth and education.
@@ -162,8 +162,8 @@ layout: default
 			left-behind children. Our group received excellence award from China Foundation for Poverty Alleviation.
                 </p>
 		
-		<p>  Vice President of a Young Volunteers Association at Nanjing University &nbsp &nbsp 
-			<span style="font-style: italic;"> Jun.2015-Jun.2016</span> <br>
+		<p>  <span style="font-weight: bold;"> Vice President </span> of a Young Volunteers Association at Nanjing University
+		 	&nbsp &nbsp <span style="font-style: italic;"> Jun.2015-Jun.2016</span> <br>
 		Organized and participated in over 100 out-of-school and 20 in-school activities covering over 1000 volunteers.
 		Our assocation received a volunteers association excellence award.
                 </p>		
@@ -182,7 +182,7 @@ layout: default
 		World ranking 32nd in 2016 <a herf="https://www.youtube.com/watch?v=iO5runHvnoM"> Calculus World Cup</a><br>
 		Meritorious winner prize in the 2016 National Mathematical Contest in Modeling<br>
 		First prize in the 2014 University Electronics Design Contest<br>
-		First prize in Invitational National Mathematical Olympiad <a herf="img/MathSeniorHigh.png">[Gold Medal]</a>, 2013  
+		First prize in Invitational National Mathematical Olympiad <a herf="http://anyirao.com/img/MathSeniorHigh.png">[Gold Medal]</a>, 2013  
 		</p>	
 	</div>    
 		
