--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@ layout: default
                 Nanjing University Outstanding Student Leader Award<br>
                 Nanjing University Outstanding Student Award<br>
 	        Nanjing University Top Volunteer Excellence Award<br>
-		World ranking 32nd in 2016 <a herf="https://www.youtube.com/watch?v=iO5runHvnoM"> Calculus World Cup</a><br>
+		World ranking 32nd in 2016 <a href="https://www.youtube.com/watch?v=iO5runHvnoM"> Calculus World Cup</a><br>
 		Meritorious winner prize in the 2016 National Mathematical Contest in Modeling<br>
 		First prize in the 2014 University Electronics Design Contest<br>
-		First prize in Invitational National Mathematical Olympiad <a herf="http://anyirao.com/img/MathSeniorHigh.png">[Gold Medal]</a>, 2013  
+		First prize in Invitational National Mathematical Olympiad <a href="http://anyirao.com/img/MathSeniorHigh.png">[Gold Medal]</a>, 2013  
 		</p>	
 	</div>    
 		
