--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ layout: default
 	<p><span style="font-weight: bold;">Word-level Adversarial Examples for NLP</span> <br>
 	<span style="font-weight: bold;">Anyi Rao</span>, Javid Ebrahimi, Dejing Dou 
 		In Annual Conference of the North American Chapter of the Association for Computational Linguistics 
-		(<span style="font-weight: bold;">NAACL</span>), 2018 Working
+		(<span style="font-weight: bold;">NAACL</span>), 2018 Submit Dec. 15th 2017
 		
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
