--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ layout: default
 	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  Advanced Integration and Mining Lab, Eugene, OR, United States of America<br>
 		Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
 		Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
-		and the method achieved excellent performances on benchmarks.
+		and the method using adversarial training achieved excellent performances on benchmarks.
 		
 	<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
 	<span style="font-style: italic;"> Jul.2017-Aug.2017 </span> &nbsp  The University of Hong Kong, Hong Kong S.A.R.<br>
