--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@ layout: default
 		<h3>Awards</h3>
 		<p>National Scholarship awarded by the China Ministry of Education, the highest honor in China<br>
 		Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
+		Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate student at the university, 
+				the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a><br><br>
 		Zhenggang Scholarship, top 40 students in Nanjing University<br>
 		Zhenggang Jingying Scholarship<br>
 		Nanjing University People Scholarship, 2016, 2017<br>	
