--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: default
 		
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
-	<p><span style="font-weight: bold;">Real-time Large-scale Surface Reconstruction of Lidar Point Cloud</span> <br>
+	<p><span style="font-weight: bold;">[1] Real-time Large-scale Surface Reconstruction of Lidar Point Cloud</span> <br>
 	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
 		In IEEE International Conference on Robotics and Automation (<span style="font-weight: bold;">ICRA</span>), 2018 Submitted	
 		<span class="tag"><a href="papers/icra2018.pdf"> [Paper]</a></span>
@@ -65,7 +65,7 @@ layout: default
 		<span class="tag"><a href="papers/icra2018pre.pdf"> [Presentation]</a></span> 
 		<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
-	<p><span style="font-weight: bold;">Word-level Adversarial Examples for NLP</span> <br>
+	<p><span style="font-weight: bold;">[2] Word-level Adversarial Examples for NLP</span> <br>
 	<span style="font-weight: bold;">Anyi Rao</span>, Javid Ebrahimi, Dejing Dou 
 		In Annual Conference of the North American Chapter of the Association for Computational Linguistics 
 		(<span style="font-weight: bold;">NAACL</span>), 2018 Submit Dec. 15th 2017
@@ -171,20 +171,21 @@ layout: default
 		
 	<div class="content" >      
 		<h3>Awards</h3>
-		<p>National Scholarship awarded by the China Ministry of Education, the highest honor in China<br>
-		Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
-		Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate student at the university, 
-				the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a><br><br>
-		Zhenggang Scholarship, top 40 students in Nanjing University<br>
-		Zhenggang Jingying Scholarship<br>
-		Nanjing University People Scholarship, 2016, 2017<br>	
-                Nanjing University Outstanding Student Leader Award<br>
-                Nanjing University Outstanding Student Award<br>
-	        Nanjing University Top Volunteer Excellence Award<br>
-		World ranking 32nd in 2016 <a href="https://www.youtube.com/watch?v=iO5runHvnoM"> Calculus World Cup</a><br>
-		Meritorious winner prize in the 2016 National Mathematical Contest in Modeling<br>
-		First prize in the 2014 University Electronics Design Contest<br>
-		First prize in Invitational National Mathematical Olympiad <a href="http://anyirao.com/img/MathSeniorHigh.png">[Gold Medal]</a>, 2013  
+		<p>
+		<li>National Scholarship awarded by the China Ministry of Education, the highest honor in China<br>
+		<li>Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
+		<li>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate student at the university, the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a><br><br>
+		<li>Zhenggang Scholarship, top 40 students in Nanjing University<br>
+		<li>Zhenggang Jingying Scholarship<br>
+		<li>Nanjing University People Scholarship, 2016, 2017<br>	
+                <li>Nanjing University Outstanding Student Leader Award<br>
+                <li>Nanjing University Outstanding Student Award<br>
+	        <li>Nanjing University Top Volunteer Excellence Award<br>
+		<li>World ranking 32nd in 2016 <a href="https://www.youtube.com/watch?v=iO5runHvnoM"> Calculus World Cup</a><br>
+		<li>Meritorious winner prize in the 2016 National Mathematical Contest in Modeling<br>
+		<li>First prize in the 2014 University Electronics Design Contest<br>
+		<li>First prize in Invitational National Mathematical Olympiad <a href="http://anyirao.com/img/MathSeniorHigh.png">[Gold Medal]</a>, 2013  
+		</li>
 		</p>	
 	</div>    
 		
