--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@ layout: default
 	</div>
 </div>   
 	
-	
 	<div class="content anchor" id="academic">     
 	<h3>Academic</h3>
 		<p>My GPA ranks No.1 in each year. All major curricula are above 95 (A+). 
 		My overall GPA is 3.96 out of 4.00, highest within 5 years. I am the top student among 183 classmates in my school. 
-			
 			
 		<p>I finished my major curricula in 2 years and I learned a bunch of online courses. 
 			<a href="http://anyirao.com/more"> [Whole]</a><br>	
@@ -75,52 +73,53 @@ layout: default
 	<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
 	<span style="font-style: italic;"> Aug.2016-Sept.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br>
-		Proposed a novel line of sight algorithm to real-time reconstruct surface and achieved state-of-the-art results.<br>
-		Employed a new surface lattice data structure in implicit surface update for memory efficiency.<br>
-		Presented a real-time 3D reconstruction pipeline for large-scale Lidar point cloud.<br>		
-		Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloud.
-			
+		<li>Proposed a novel line of sight algorithm to real-time reconstruct surface and achieved state-of-the-art results.<br>
+		<li>Employed a new surface lattice data structure in implicit surface update for memory efficiency.<br>
+		<li>Presented a real-time 3D reconstruction pipeline for large-scale Lidar point cloud.<br>		
+		<li>Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloud.
+		</li>	
 	
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
 	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  Advanced Integration and Mining Lab, Eugene, OR, United States of America<br>
-		Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
-		Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
+		<li>Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
+		<li>Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
 		and the method using adversarial training achieved excellent performances on benchmarks.
-		
+		</li>
 	<p><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
 	<span style="font-style: italic;"> Jul.2017-Aug.2017 </span> &nbsp  The University of Hong Kong, Hong Kong S.A.R.<br>
-		Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
+		<li>Proposed a fast decoding algorithm to deal with performance errors and reduce computational complexity from O(n<sup>2</sup>)
 		to O(n). It is able to work in real time with practical length scores.<br>
-		Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
-		Developed a new free open-source Windows-based automatic music follower and accompanist.
+		<li>Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
+		<li>Developed a new free open-source Windows-based automatic music follower and accompanist.
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		<span class="tag"><a href="papers/Report Automatic Music Accompanist.pdf"> [Paper]</a></span>
 		<span class="tag"><a href="papers/Automatic Music Accompanist Presentation.pdf"> [Presentation]</a></span>
-		
+		</li>
 		
 	<p><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
 	<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Mining from DatA Group, Nanjing University <br> 
-		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
-		Preprocessed image data (cleaning, stretching, rotating, normalizing) and implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
-		Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
-	
+		<li>Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
+		<li>Preprocessed image data (cleaning, stretching, rotating, normalizing) and implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
+		<li>Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
+		</li>
 		
 	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
-		Learned K-armed bandit, Monte Carlo RL, imitation learning. <br>
-		Constructed three models to depict road circumstances and two models to predict car motion using 
-		Markov Decision Process and OD estimated matrix method.<br>
-		Improved our solutions using Convex Optimization in terms of traffic load, vehicle type and different kinds of 
+		<li>Learned K-armed bandit, Monte Carlo RL, imitation learning. <br>
+		<li>Constructed three models to depict road circumstances and two models to predict car motion using 
+			Markov Decision Process and OD estimated matrix method.<br>
+		<li>Improved our solutions using Convex Optimization in terms of traffic load, vehicle type and different kinds of 
 			tollbooths. <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span><br>
-		 
+		</li>
 		   
             		    
 	<p><span style="font-weight: bold;">Single Photon Detector</span> <br>
 	<span style="font-style: italic;">  Oct.2014-Dec.2015</span>
-		     &nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
-		     Designed a 64-channel low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times, drew an 8-layers circuit board. 
-		     <span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span>
-		     <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Oral]</a></span><br>
+		&nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
+		<li>Designed a 64-channel low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times, drew an 8-layers circuit board. 
+		<span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span>
+		<span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Oral]</a></span><br>
+		<li>	
 	</div>        
 	
 	<div class="content anchor" id="project">  
@@ -174,7 +173,8 @@ layout: default
 		<p>
 		<li>National Scholarship awarded by the China Ministry of Education, the highest honor in China<br>
 		<li>Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
-		<li>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate student at the university, the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a><br><br>
+		<li>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate student at the university, 
+			the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a><br>
 		<li>Zhenggang Scholarship, top 40 students in Nanjing University<br>
 		<li>Zhenggang Jingying Scholarship<br>
 		<li>Nanjing University People Scholarship, 2016, 2017<br>	
@@ -216,5 +216,3 @@ layout: default
 		src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=280&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&t=tt'></script>	
 	</div>
 </body>
-
-
