--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ layout: default
 	<span style="font-weight: bold;">Anyi Rao</span>, Javid Ebrahimi, Dejing Dou 
 		In Annual Conference of the North American Chapter of the Association for Computational Linguistics 
 		(<span style="font-weight: bold;">NAACL</span>), 2018 Submit Dec. 15th 2017
+		<span class="tag"><a href="papers/naacl2018.pdf"> [Paper]</a></span>
 		
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
