--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@ layout: default
             <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China<br>
             Email: anyirao [at] outlook (dot) com<br>
             </p>
-		<div id="contact">
-        		<a href="https://www.linkedin.com/in/anyirao/" class="icon">
-                		<img src="images/linkedin_30.jpg" alt="View Anyi (Ray) Rao's profile on LinkedIn">
-            		</a>
-              		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<div id="contact">	
+			<a href="https://scholar.google.com/citations?user=8lKr7j4AAAAJ&hl=en&authuser=1&oi=ao" class="icon">
+          			<img src="images/google_scholar_30.jpg"  alt="View Anyi (Ray) Rao's profile on Google Scholar">
+          		</a>
+              		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           		<a href="https://github.com/AnyiRao" class="icon">
           			<img src="images/git_30.jpg"  alt="View Anyi (Ray) Rao's codes on Github">
           		</a>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://www.linkedin.com/in/anyirao/" class="icon">
+                		<img src="images/linkedin_30.jpg" alt="View Anyi (Ray) Rao's profile on LinkedIn">
+            		</a>
         	</div>
 	  </div>
 </div>	   
