--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@ layout: default
 		<span class="tag"><a href="papers/icra2018pre.pdf"> [Presentation]</a></span> 
 		<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 		
-	<p><span style="font-weight: bold;">[2] Word-level Adversarial Examples for NLP</span> <br>
-	<span style="font-weight: bold;">Anyi Rao</span>, Javid Ebrahimi, Dejing Dou 
+	<p><span style="font-weight: bold;">[2] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
+	Javid Ebrahimi, <span style="font-weight: bold;">Anyi Rao</span>, Daniel Lowd, Dejing Dou 
 		In Annual Conference of the North American Chapter of the Association for Computational Linguistics 
-		(<span style="font-weight: bold;">NAACL</span>), 2018 Submit Dec. 15th 2017
-		<span class="tag"><a href="papers/naacl2018.pdf"> [Paper]</a></span>
-		
+		(<span style="font-weight: bold;">NAACL</span>), 2018 Submitted
+		<span class="tag"><a href="https://arxiv.org/abs/1712.06751"> [Paper]</a></span>
+		<span class="tag"><a href="https://github.com/AnyiRao/WordAdver"> [Code]</a></span>
+	
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
 	<p><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
