--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
 			I was a research summer intern of The University of Hong Kong, worked with Prof.
 			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> (Associate Dean) and
 			a member of Learning And Mining from DatA group led by Prof. 
-			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> (Fellow of the ACM, AAAI, AAAS, IEEE). 
+			<a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> (ACM, AAAI, AAAS, IEEE Fellow). 
 		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
