--- a/index.html
+++ b/index.html
@@ -179,8 +179,9 @@ layout: default
 		<p>
 		<li>National Scholarship awarded by the China Ministry of Education, the highest honor in China<br>
 		<li>Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province<br>
-		<li>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate student at the university, 
+		<li>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate students at the university, 
 			the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a><br>
+		<li>SenseTime Scholarship, awarded to 30 students out of all AI major undergraduate students in China<br>
 		<li>Zhenggang Scholarship, top 40 students in Nanjing University<br>
 		<li>Zhenggang Jingying Scholarship<br>
 		<li>Nanjing University People Scholarship, 2016, 2017<br>	
