--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@ layout: default
 	<h3>Publication</h3>
 	<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
 	Javid Ebrahimi, <span style="font-weight: bold;">Anyi Rao</span>, Daniel Lowd, Dejing Dou 
-		In Annual Conference of the North American Chapter of the Association for Computational Linguistics 
-		(<span style="font-weight: bold;">NAACL</span>), 2018 Submitted
+		In Annual Meeting of the Association for Computational Linguistics 
+		(<span style="font-weight: bold;">ACL</span>), 2018 Submitted
 		<span class="tag"><a href="https://arxiv.org/abs/1712.06751"> [Paper]</a></span>
 		<span class="tag"><a href="https://github.com/AnyiRao/WordAdver"> [Code]</a></span>
 		
-	<p><span style="font-weight: bold;">[2] Real-time Large-scale Surface Reconstruction of Lidar Point Cloud</span> <br>
-	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
-		In IEEE International Conference on Robotics and Automation (<span style="font-weight: bold;">ICRA</span>), 2018 Submitted	
+	<p><span style="font-weight: bold;">[2] SDFMap: A Real-time 3D Mapping Framework for LiDAR Point Cloud</span> <br>
+	Jian Zhang*, <span style="font-weight: bold;">Anyi Rao*</span>, Pei Li, Conghui Geng, Yao Yu, Yu Zhou, Sidan Du (*indicates equal contribution)
+		In IEEE/RSJ International Conference on Intelligent Robots and Systems (<span style="font-weight: bold;">IROS</span>), 2018 Submitted	
 		
 		<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
 		<span class="tag"><a href="papers/icra2018pre.pdf"> [Presentation]</a></span> 
