--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ layout: default
 	<h3>Short Bio</h3>
 		<p> I am a final-year undergrad student from School of Electronic Science and Engineering 
 			<a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
-			Excellent Engineer Honor Class</a>, Nanjing University. I am a research assistant of The University of Oregon, 
-			supervised by Prof. <a href="http://ix.cs.uoregon.edu/~dou/">Dejing Dou</a>.
+			Excellent Engineer Honor Class</a>, Nanjing University. I am a research assistant of The NSF Center for Big Learning, 
+			worked with Prof. <a href="http://ix.cs.uoregon.edu/~dou/">Dejing Dou</a> (Director).
 			I was a research summer intern of The University of Hong Kong, worked with Prof.
 			<a href="http://www.cs.hku.hk/people/profile.jsp?teacher=fcmlau">Francis Lau</a> (Associate Dean) and
 			a member of Learning And Mining from DatA group led by Prof. 
@@ -77,7 +77,7 @@ layout: default
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
-	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  Advanced Integration and Mining Lab, Eugene, OR, United States of America<br>
+	<span style="font-style: italic;"> Sept.2017-present </span> &nbsp  The NSF Center for Big Learning, Eugene, OR, United States of America<br>
 		<li>Proposed an efficient word-level gradient-based adversarial examples generation approach for training robust models.<br>
 		<li>Evaluated the method with convolutional neural networks across a wide range of sentence-level classification tasks 
 		and the method using adversarial training achieved excellent performances on benchmarks.
