--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout: default
 		<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
 		<span class="tag"><a href="papers/icra2018pre.pdf"> [Presentation]</a></span> 
 		<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
-	
+	8
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>		
 	<p><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
@@ -98,8 +98,8 @@ layout: default
 		to O(n). It is able to work in real time with practical length scores.<br>
 		<li>Constructed a comprehensive system and developed a parallel Hidden Markov Model for score following.<br>
 		<li>Developed a new free open-source Windows-based automatic music follower and accompanist.
+		<span class="tag"><a href="http://arxiv.org/abs/1803.09033"> [Paper]</a></span>
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
-		<span class="tag"><a href="papers/Report Automatic Music Accompanist.pdf"> [Paper]</a></span>
 		<span class="tag"><a href="papers/Automatic Music Accompanist Presentation.pdf"> [Presentation]</a></span>
 		</li>
 		
